--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,177 @@
-body {
+*,*::after,*::before{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+ --light-green:hsl(148, 38%, 91%);
+ --medium-green: hsl(169, 82%, 27%);
+ --red: hsl(0, 66%, 54%);
+ --white: hsl(0, 0%, 100%);
+ --gray-1: hsl(186, 15%, 59%);
+ --gray-2: hsl(187, 24%, 22%);
+
+}
+body{
+  background-color: var(--light-green);
+
+}
+main{
+  display: flex;
+  flex-direction: column;
+  max-width:700px;
+  background-color: var(--white);
+  width: 100%;
+  margin: 4rem auto;
+  padding: 2rem;
+  border-radius: 10px;
+}
+footer{
+  text-align: center;
+  font-size: 1.1rem;
+}
+a{
+  color: inherit;
+  text-decoration: none;
+}
+input{
+  display: block;
+  padding: 0.85em;
+  font-family: inherit;
+  width: 100%;
+  margin-top: 0.5em;
+  border-radius: 5px;
+  border: 1px solid var(--gray-1);
+}
+
+.form__field label, form .title {
+  color: var(--gray-2);
+  font-weight: 400;
+  margin-top: 1em;
+  display: inline-block;
+}
+.form__fields{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.form__fields .form__field{
+  flex: 0.5;
+  transition: all 0.5s ease-in-out;
+}
+.query_type .form__field{
+  padding:0.6em 0.85em;
+  border: 0.5px solid var(--gray-1);
+  margin-top: 0.8em;
+  border-radius: 10px;
+}
+.flex-row{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 0.5em;
+}
+input[type='radio'],input[type='checkbox']{
+  width: initial;
+  display: initial;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.custom__radio,.custom__checkbox{
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--gray-1);
+  display: inline-block;
+  position: relative;
+  transition: all 0.5s ease-in-out;
+  margin-right: 0.5em;
+}
+.custom__radio,.custom__radio::after{
+  border-radius: 50%;
+}
+.query_type .form__field label{
+  margin-top: 0;
+}
+.custom__radio::after{
+  content: '';
+  background-color: var(--medium-green);
+  top: 3px;
+  left: 3.2px;
+  width: 12px;
+  height: 12px;
+}
+.custom__checkbox::after{
+  content: '\2713';
+  font-size: 0.8rem;
+  top: 1.2px;
+  left: 3.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+}
+.custom__radio::after,.custom__checkbox::after{
+  opacity: 0;
+  transform: scale(0.01);
+  position: absolute;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+}
+input[type='checkbox']:checked + .custom__checkbox{
+  background-color: var(--medium-green);
+}
+input[type='radio']:checked + .custom__radio::after,
+input[type='checkbox']:checked + .custom__checkbox::after{
+  opacity: 1;
+  transform: scale(1);
+}
+.query_type .form__field:has(input[type='radio']:checked) {
+  background-color: var(--light-green);
+}
+textarea{
+  display:block;
+  resize: none;
+  margin: 1em 0;
+  width: 100%;
+  height: 10em;
+  
+}
+
+.btn{
+  background-color: var(--medium-green);
+  width: 100%;
+  cursor: pointer;
+  margin-top: 2rem;
+  padding:1em 0.8em;
+  border: none;
+  color: var(--white);
+  border-radius: 10px;
+  font-size: 1.1em;
+}
+.error{
+  color: var(--red);
+  margin: 0.3em 0;
+  display: block;
+}
+.toast{
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.719);
+  position: absolute;
+  top: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: var(--light-green);
+  border-radius: 10px;
+}
+.toast__header.flex-row{
+  gap: 1em;
+  margin-bottom: 0.7em;
+}
+
+@media (max-width:600px) {
+  .form__fields{
+    flex-direction: column;
+  }
 }
