--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 :root{
  --light-green:hsl(148, 38%, 91%);
- --medium-green: hsl(169, 82%, 27%);
+ --medium-green: #0c7d69;
  --red: hsl(0, 66%, 54%);
  --white: hsl(0, 0%, 100%);
  --gray-1: hsl(186, 15%, 59%);
@@ -15,7 +15,7 @@
 }
 body{
   background-color: var(--light-green);
-
+  font-family: "Karla", sans-serif;
 }
 main{
   display: flex;
@@ -79,6 +79,7 @@ input[type='radio'],input[type='checkbox']{
   opacity: 0;
   cursor: pointer;
 }
+
 .custom__radio,.custom__checkbox{
   width: 20px;
   height: 20px;
@@ -127,7 +128,8 @@ input[type='checkbox']:checked + .custom__checkbox::after{
   opacity: 1;
   transform: scale(1);
 }
-.query_type .form__field:has(input[type='radio']:checked) {
+.query_type .form__field:has(input[type='radio']:checked),
+.query_type .form__field:has([type='radio']:focus) {
   background-color: var(--light-green);
 }
 textarea{
@@ -137,6 +139,8 @@ textarea{
   width: 100%;
   height: 10em;
   padding: 1em;
+  font-family: inherit;
+  font-size: 1.1rem;
 }
 
 .btn{
@@ -157,19 +161,14 @@ textarea{
 }
 .toast{
   padding: 1em;
-  background-color: rgba(0, 0, 0, 0.719);
-  position: absolute;
-  top: 3%;
-  left: 50%;
-  transform: translateX(-50%);
+  background-color: var(--medium-green);
   color: var(--light-green);
-  border-radius: 10px;
+  border-radius:10px;
 }
-.toast__header.flex-row{
-  gap: 1em;
-  margin-bottom: 0.7em;
+.toast .flex-row{
+  gap:0.8em;
+  margin-bottom: 0.5em;
 }
-
 @media (max-width:600px) {
   .form__fields{
     flex-direction: column;
